web: add links to demo's menu

--- a/web/app.css
+++ b/web/app.css
@@ -28,6 +28,13 @@
     padding: 5px 0 15px;
 }
 
+#menu a {
+  font-weight: bold;
+  display: inline-block;
+  margin-right: 2.5em;
+  vertical-align: middle;
+}
+
 #menu h3 {
 }
 
